# recrm

./: Cargo.toml
.github/workflows/: ci.yml
recrm-cli/: Cargo.toml
recrm-cli/src/: main.rs
recrm-core/: Cargo.toml
recrm-core/src/: event.rs  file.rs  job.rs  lib.rs  worker.rs
src/: main.rs
