[package]
name = "recrm"
version = "0.1.0"
authors = ["Ciffelia <mc.prince.0203@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
parking_lot = "0.11.1"
log = "0.4.14"
env_logger = "0.8.3"
num_cpus = "1.13.0"
